Updated paths & gitgnore

--- a/Auto_Report/Auto_report.ipynb
+++ b/Auto_Report/Auto_report.ipynb
@@ -2,21 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Author: Will Cross-Bermingham\n",
+    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import sys\n",
-    "sys.path.insert(1, '../')\n",
-    "from datetime import datetime, timedelta, date\n",
+    "from datetime import timedelta, date\n",
     "import plotly.express as px\n",
-    "import config\n",
     "from fredapi import Fred\n",
     "import os\n",
     "import shutil\n",
     "from fpdf import FPDF\n",
+    "\n",
+    "#Config is a user file stored in the parent directory\n",
+    "import sys\n",
+    "sys.path.insert(1, '../')\n",
+    "import config\n",
     "\n",
     "# User will need a FRED API key, can sign up for one here https://fred.stlouisfed.org/docs/api/api_key.html\n",
     "# replace with your own API key: fred = Fred(api_key='YOUR KEY HERE')\n",
@@ -25,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +115,7 @@
     "\n",
     "       \n",
     "        idx = idx + 1 \n",
-    "        \n",
+    "        #Create the list of plot images which is passed to the pdf function\n",
     "        if idx % 6 == 0 :\n",
     "            page_fig_list.append(figlist)\n",
     "            figlist = []\n",
@@ -125,13 +129,14 @@
     "            info_store = pd.merge(info_store, info_add, left_index=True, right_index=True, how='left')\n",
     "            \n",
     "    df_collect.sort_index()\n",
+    "    \n",
     "    return df_collect,info_store,page_fig_list\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -38146,7 +38151,7 @@
        "''"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -38157,17 +38162,18 @@
     "start_d ='1982-01-01'\n",
     "end_d=date.today()\n",
     "\n",
+    "# VERY IMPORTANT, FRED CODES MUST BE MULTIPLES OF SIX: 6,12,... \n",
     "FRED_list = ['T10Y2Y','WALCL','EFFR','SP500','MORTGAGE30US','BAMLH0A0HYM2','DEXUSEU','DEXUSUK','DTWEXBGS','DCOILBRENTEU','DEXJPUS','DEXCHUS']\n",
     "Name_remap = {'T10Y2Y': '10-Year Minus 2-Year Treasury', 'WALCL': 'Reserve Balances: Total Assets'}\n",
     "\n",
-    "#Optional inputs: plots = True\n",
     "df,dfinfo,figlist = fredget(FRED_list,start_d,end_d,name_map = Name_remap)\n",
     "\n",
     "#output the PDF \n",
     "pdf = PDF()\n",
     "for elem in figlist:\n",
     "    pdf.print_page(elem)\n",
-    "    \n",
+    "   \n",
+    "#Save the generated file    \n",
     "pdf.output('MacroReport.pdf', 'F')\n"
    ]
   }
